<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/headerBackButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:animateLayoutChanges="true">

        <ImageView
            android:id="@+id/headerBackButtonImage"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerInParent="true"
            android:background="@drawable/left_arrow" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view1"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/rbtnSex"
            android:layout_gravity="center"
            android:layout_marginRight="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            >

            <RadioButton
                android:id="@+id/rbtnMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center|center_horizontal|center_vertical"
                android:textColor="@color/black_87"
                android:text="@string/man"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rbtnFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:checked="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/black_87"
                android:gravity="center|center_horizontal|center_vertical"
                android:layoutDirection="rtl"
                android:text="@string/woman"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black_87"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="@string/sex"/>

        </RadioGroup>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/old"
                    android:textColor="@color/black_87"
                    android:textStyle="bold"
                    android:textSize="16dp" />

                <NumberPicker
                    android:id="@+id/np_old"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:descendantFocusability="blocksDescendants" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:textColor="@color/black_87"
                    android:textSize="16dp"
                    android:textStyle="bold"/>

                <NumberPicker
                    android:id="@+id/np_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:descendantFocusability="blocksDescendants" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:textColor="@color/black_87"
                    android:textStyle="bold"
                    android:textSize="16dp" />


                <NumberPicker
                    android:id="@+id/np_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:descendantFocusability="blocksDescendants" />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/txtIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green_dark"
            android:layout_gravity="center"
            android:textSize="16sp"/>
    </LinearLayout>


    <Button
        android:id="@+id/continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_bg_suevey"
        android:minWidth="100dp"
        android:text="@string/next"
        android:textColor="@color/colorPrimaryDark" />


</RelativeLayout>
