<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/app_name"
            android:textColor="@color/text_color_title"
            android:textSize="20sp" />

<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_below="@+id/txtTitle"-->
<!--            android:layout_margin="16dp"-->
<!--            app:cardCornerRadius="6dp"-->
<!--            android:elevation="2dp"-->
<!--            android:padding="8dp">-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtTitle"
                android:layout_margin="16dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/cases_all_contry"
                    android:textColor="@color/black_87"
                    android:textSize="20sp" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layoutDirection="rtl"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/cases"
                            android:textColor="@color/cases"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/txtCases"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textColor="@color/cases"
                            android:textSize="18sp" />
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:orientation="horizontal"
                        android:layoutDirection="rtl">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/recovered"
                            android:textColor="@color/recovered"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/txtRecover"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textColor="@color/recovered"
                            android:textSize="18sp" />
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:orientation="horizontal"
                        android:layoutDirection="rtl">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/deaths"
                            android:textColor="@color/deaths"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/txtDeaths"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textColor="@color/deaths"
                            android:textSize="18sp" />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>

<!--        </androidx.cardview.widget.CardView>-->
    </RelativeLayout>

    <ImageView
        android:id="@+id/map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/footerView"
        android:layout_below="@+id/headerView"
        android:src="@drawable/bg_main"
        />

    <LinearLayout
        android:id="@+id/footerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/transparent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnSurvey"
            style="@style/buttonsPopUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/corona_survey" />

        <Button
            android:id="@+id/btnMap"
            style="@style/buttonsPopUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/statistics_corona_all_countries" />

    </LinearLayout>
</RelativeLayout>